# kaf.nvim

./: .gitignore  Cargo.toml  README.md  build.lua  flake.nix  shell.nix
.github/workflows/: docgen.yaml
doc/: api.md  kaf.nvim.txt
kaf/: go.mod  go.sum  main.go
kaf/client/: message.go  topic.go
kaf/handlers/: json.go  messages.go  topics.go
kaf/json/: json.go
lua/kaf/: artifact.lua  cache.lua  client.lua  connections.lua  data.lua  event.lua  init.lua  lib.lua  logger.lua  manager.lua  message.lua  notify.lua  topic.lua  types.lua  wrapper.lua
lua/kaf/api/: init.lua
lua/kaf/config/: default.lua  init.lua
lua/kaf/integrations/: init.lua
lua/kaf/integrations/fidget/: init.lua
lua/kaf/integrations/telescope/: clients.lua  init.lua  messages.lua  topics.lua
lua/kaf/notifier/: handler.lua  init.lua
lua/kaf/register/: init.lua
lua/kaf/utils/: buffer.lua  init.lua  job.lua  lib.lua  timestamps.lua  ui.lua
lua/telescope/_extensions/: connections.lua  kaf.lua
src/: lib.rs  result.rs  topic.rs  types.rs
src/types/: input.rs  mod.rs  output.rs
