[package]
name = "kaf"
version = "0.1.0"
edition = "2021"

[lib]
name = "kaf"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
kafka = "0.10.0"
mlua = { version = "0.9.7", features = ["lua51", "module", "macros"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
